force-app/main/default/objects/AcquiredProduct__c/AcquiredProduct__c.object-meta.xml
<CustomObject>
    <description>Using a custom object to replace assets as we need to rollup the duration in order to calculate the avg. life time of a customer and we cannot do this using assets - no rollups.</description>
    <label>Acquired Product</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acquired Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>