force-app/main/default/objects/AcquiredProduct__c/fields/Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_Months__c</fullName>
    <formula>IF 
(IsBlank (End_Date__c), (Today() - Start_Date__c)/30,

( End_Date__c  -  Start_Date__c ) / 30 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>